--- a/database.html
+++ b/database.html
@@ -48,7 +48,7 @@
     </div>
 
     <script src="https://https://ajax.googleapis.com/ajax/libs/angularjs.min.js"></script>
-    <script src="app.js"></script>
+    <script src="index.js"></script>
  
 </body>
 </html>
