--- a/database.html
+++ b/database.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>COSC 331 Database</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 </head>
-<body ng-controller="contactsController">
+<body>
     <h1>Database</h1>
     <p>Please fill out the information below.</p>
     <div class ="container">
@@ -44,11 +45,11 @@
                     <p>{{contact.phone}}</p>
                 </li>
             </u1>
-        </div>
+        </div> -->
     </div>
 
     <script src="https://https://ajax.googleapis.com/ajax/libs/angularjs.min.js"></script>
-    <script src="index.js"></script>
+    <script src="routes.js"></script> -->
  
 </body>
 </html>
